Added team player path, deleted summoner
